# panoptic

./: .gitignore  .startapi.sh  .testendpoint.sh  README.md  debug_metadata.py  main.py  prd.md  processed_an_illustrated_book_of_bad_arguments_md_results.txt  processed_test_document_md_results.txt  pyproject.toml  run_app.py  test_doc.md  test_flashcards.py  test_telegram_flashcards.py
examples/: basic_usage.py  flashcard_client_usage.py  json_usage.py  main_app_usage.py  simple_usage.py  telegram_bot_usage.py  web_api_usage.py
examples/improved_architecture/: config.py  module_structure.md  repositories.py  storage_adapters.py
frontend/: README.md  package-lock.json  package.json  vite.config.ts
frontend/src/: App.vue  KGExtract.vue  api.ts  main.ts  router.ts
scripts/: reset_database.py
scripts/csv_pipeline/: test_ontology_generation.py
src/: __init__.py  main.py  ontology.json  processed_an_illustrated_book_of_bad_arguments_md_results.txt  processed_test_doc_md_results.txt  processed_the_art_of_doing_science_and_engineering_md_results.txt  test_document.md
src/bots/: __init__.py  base.py  telegram_bot.py
src/flashcards/: __init__.py  config.py
src/knowledge_graph/: __init__.py  config.py  logger_config.py  logging_utils.py
tests/: test_content_cleaning.py  test_database_client.py  test_database_client_functional.py  test_document_manager_kg_integration.py  test_document_model.py  test_end_to_end_real_document.py  test_kg_extraction_service.py  test_kg_processing_strategy_logic.py  test_neo4j_service.py  test_pipeline_integration.py
(+222 files in other folders)
