[project]
name = "knowledgeAgent"
version = "0.1.0"
description = "A module for creating and managing knowledge graphs with AI"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    'langchain_openai',
    'langchain-ollama',
    'langchain-community',
    'langchain',
    'gensim',
    'nltk',
    'llama_index',
    'llama-index-vector-stores-chroma',
    'nebula3-python',
    'llama-index-graph-stores-nebula',
    'llama-index-llms-ollama',
    'jinja2',
    'langchain_experimental',
    'unstructured[md]',
    'chromadb',
    'onnxruntime==1.15.0',
    "multiprocess>=0.70.17",
    "python-telegram-bot",
    "python-dotenv",
    "requests",
    "pytest",
    "neo4j",
    "kg-gen",
    "fastapi",
    "uvicorn",
    "python-multipart",
    "dspy",
    "lancedb>=0.25.3",
]

[project.urls]
Homepage = "https://github.com/yourusername/knowledgeAgent"
Issues = "https://github.com/yourusername/knowledgeAgent/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
packages = ["src"]

[tool.hatch.build.targets.wheel]
packages = ["src"]
only-include = ["knowledgeAgent"]

[tool.hatch.build.targets.wheel.sources]
"src" = ""

[tool.hatch.build.targets.sdist]
include = [
    "src",
    "LICENSE.txt",
    "README.md",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.pylint.MASTER]
init-hook='import sys; sys.path.append("src")'
